2003-03-25  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: cygwin support

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2003-01-04  Masao Mutoh <mutoh@highway.ne.jp>

	* README, COPYING.LIB: Change license term from "the GNU LIBRARY General Public
	License version 2." to "the GNU LESSER GENERAL PUBLIC LICENSE Version 2.1.".

2003-01-03  Nikolai :: lone-star :: Weibull <lone-star@home.se>

	* src/lib/gconf2.rb: Added gconf2.so requirement.
	Reported by Eliot Landrum <eliot@landrum.cx>.

2002-12-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-client.c: Follow Ruby/GLib changes.
	Pointed out by Joshua Keith <joshuakeith@linuxmail.org>.

2002-11-20  Masao Mutoh <mutoh@highway.ne.jp>

	* src/lib/gconf2.rb: Move from lib/gconf2.rb as it was not installed 
	by make install.

2002-11-20  Masao Mutoh <mutoh@highway.ne.jp>

	* extconf.rb: Remove checking either gdk2 is installed or not.

2002-11-18  Nikolai :: lone-star :: Weibull <lone-star@home.se>

	* src/*.[ch]: Updated headers to use LGPL license, not GPL.

2002-11-17  Nikolai :: lone-star :: Weibull <lone-star@home.se>

	* src/*.[ch]: Updated headers to be more CVS-like using $Author: sakai $
	and $Date: 2003/03/25 02:12:11 $ macros.

2002-11-14  Nikolai :: lone-star :: Weibull <lone-star@home.se>

	* src/rbgconf.c: Removed a redundant comment.
	* src/rbgconf-entry.c: Changed is_default? to default? and
	set_is_default to set_default.
	* extconf.rb: Added a check to compile glib2 before gconf2.
	* lib/gconf2.rb: New file.

2002-11-12  Nikolai :: lone-star :: Weibull <lone-star@home.se>

	* src/*: initial upload.