@@ -1,3 +1,7 @@
+2003-05-24  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgconf-metainfo.[ch]: Fixed compile error.
+
 2003-03-25  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
 	* extconf.rb: cygwin support
@@ -36,8 +40,8 @@
 
 2002-11-17  Nikolai :: lone-star :: Weibull <lone-star@home.se>
 
-	* src/*.[ch]: Updated headers to be more CVS-like using $Author: sakai $
-	and $Date: 2003/03/25 02:12:11 $ macros.
+	* src/*.[ch]: Updated headers to be more CVS-like using $Author: mutoh $
+	and $Date: 2003/05/24 13:23:34 $ macros.
 
 2002-11-14  Nikolai :: lone-star :: Weibull <lone-star@home.se>
 
